kubernetes/apps/external/external-dns-cloudflare/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-dns
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: external-dns-cloudflare
    egress:
      - toFQDNs:
          - matchName: api.cloudflare.com
        toPorts:
          - ports:
              - port: "443"
